force-app/main/default/objects/Capital_Requests__c/fields/Involve_Building__c.field-meta.xml
<CustomField>
    <fullName>Involve_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are building improvements in scope for this project?</description>
    <inlineHelpText>Are building improvements in scope for this project?</inlineHelpText>
    <label>Involve Building Improvements?</label>
    <type>Checkbox</type>
</CustomField>