force-app/main/default/objects/Capital_Requests__c/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <inlineHelpText>Question? Refer to your Financial Analyst.</inlineHelpText>
    <label>IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>