force-app/main/default/objects/Capital_Requests__c/fields/Is_a_Safety_Issue__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Safety_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this CFR address any known Safety Issues?</description>
    <inlineHelpText>Does this CFR address any known Safety Issues?</inlineHelpText>
    <label>Does project address a Safety Issue?</label>
    <type>Checkbox</type>
</CustomField>