force-app/main/default/objects/Capital_Requests__c/fields/Is_project_related_to_Cloud_Computing__c.field-meta.xml
<CustomField>
    <fullName>Is_project_related_to_Cloud_Computing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been created as part of CR00030096.</description>
    <label>Is project related to Cloud Computing</label>
    <type>Checkbox</type>
</CustomField>