force-app/main/default/objects/Capital_Requests__c/fields/Is_this_a_Physical_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Physical_Asset__c</fullName>
    <label>Is this a Physical Asset?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>