force-app/main/default/objects/Capital_Requests__c/fields/Is_this_a_Rental_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Rental_Asset__c</fullName>
    <description>The information from the Rental Asset indicator on CFR form, will flow to S4 and drive configuration for Rental Asset on the S4 side.

-- Created as part of CR: CR00032666 | 01010737</description>
    <label>Is this a Rental Asset?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>