force-app/main/default/objects/Capital_Requests__c/fields/Is_this_Asset_Taggable__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Asset_Taggable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this Asset Taggable?</label>
    <type>Checkbox</type>
</CustomField>