force-app/main/default/objects/Capital_Requests__c/fields/Is_this_project_Security_related__c.field-meta.xml
<CustomField>
    <fullName>Is_this_project_Security_related__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this project expand current security systems or add new components?</inlineHelpText>
    <label>Is this project Security related?</label>
    <type>Checkbox</type>
</CustomField>