force-app/main/default/objects/Capital_Requests__c/fields/JDE_CFR_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_CFR_Number__c</fullName>
    <description>Manually enter the Order Number related to the CFR. (JDE or SAP)</description>
    <inlineHelpText>Manually enter the Order Number related to the CFR. (JDE or SAP)</inlineHelpText>
    <label>ERP CFR Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>