force-app/main/default/objects/Capital_Requests__c/fields/Key_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Key_Assumptions__c</fullName>
    <label>Key Assumptions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>