force-app/main/default/objects/Capital_Requests__c/fields/Last_Approved_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Approved_Step__c</fullName>
    <description>Picklist to hold the step number of Last Approved step in Approval Process</description>
    <label>Last Approved Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>