force-app/main/default/objects/Capital_Requests__c/fields/Life_Expectancy_of_Asset_pcn__c.field-meta.xml
<CustomField>
    <fullName>Life_Expectancy_of_Asset_pcn__c</fullName>
    <description>What is the Life Expectancy of Asset(s)</description>
    <inlineHelpText>What is the Life Expectancy of Asset(s)</inlineHelpText>
    <label>Life Expectancy of Asset</label>
    <length>10</length>
    <type>Text</type>
</CustomField>