force-app/main/default/objects/Capital_Requests__c/fields/MIRR__c.field-meta.xml
<CustomField>
    <fullName>MIRR__c</fullName>
    <inlineHelpText>Question? Refer to your Financial Analyst.</inlineHelpText>
    <label>MIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>