force-app/main/default/objects/Capital_Requests__c/fields/Need_NPD__c.field-meta.xml
<CustomField>
    <fullName>Need_NPD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NPD NEED for Global Sourcing</description>
    <label>Need NPD?</label>
    <type>Checkbox</type>
</CustomField>