force-app/main/default/objects/Capital_Requests__c/fields/Notes_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Notes_External_ID__c</fullName>
    <description>Field for Lotus Notes ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Field for Lotus Notes ID</inlineHelpText>
    <label>Notes External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>