force-app/main/default/objects/Capital_Requests__c/fields/NPV__c.field-meta.xml
<CustomField>
    <fullName>NPV__c</fullName>
    <inlineHelpText>Question? Refer to your Financial Analyst.</inlineHelpText>
    <label>NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>