force-app/main/default/objects/Capital_Requests__c/fields/Op_Comp_CFO__c.field-meta.xml
<CustomField>
    <fullName>Op_Comp_CFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Capital &amp; Lease Approval - ($250K - $500K)</inlineHelpText>
    <label>Controller</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Rick Wagner as Controller/VP Finance.</errorMessage>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>0050L0000097RaoQAE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>