force-app/main/default/objects/Capital_Requests__c/fields/Operational_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Operational_Strategy__c</fullName>
    <description>Implementation choice
Procurement strategy
Technology strategy
Manufacturing strategy</description>
    <inlineHelpText>Implementation choice
Procurement strategy
Technology strategy
Manufacturing strategy</inlineHelpText>
    <label>Operational Strategy</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>