force-app/main/default/objects/Capital_Requests__c/fields/Operations_VP__c.field-meta.xml
<CustomField>
    <fullName>Operations_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lease Approval ($50 - 100K)</inlineHelpText>
    <label>Operations VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestsrjAq</relationshipName>
    <type>Lookup</type>
</CustomField>