force-app/main/default/objects/Capital_Requests__c/fields/Optional_Reviewer_3__c.field-meta.xml
<CustomField>
    <fullName>Optional_Reviewer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional Reviewer</description>
    <inlineHelpText>Optional Reviewer</inlineHelpText>
    <label>Optional Reviewer 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests07tv</relationshipName>
    <type>Lookup</type>
</CustomField>