force-app/main/default/objects/Capital_Requests__c/fields/Other_Asset_Information_pcn__c.field-meta.xml
<CustomField>
    <fullName>Other_Asset_Information_pcn__c</fullName>
    <description>OTHER INFORMATION/ SERIAL # ON ASSET(S) AS APPLICABLE</description>
    <inlineHelpText>OTHER INFORMATION/ SERIAL # ON ASSET(S) AS APPLICABLE</inlineHelpText>
    <label>Other Asset Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>