force-app/main/default/objects/Capital_Requests__c/fields/Other_Options__c.field-meta.xml
<CustomField>
    <fullName>Other_Options__c</fullName>
    <label>What other guidelines were considered?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>