force-app/main/default/objects/Capital_Requests__c/fields/own_building_or_leasehold_improvement__c.field-meta.xml
<CustomField>
    <fullName>own_building_or_leasehold_improvement__c</fullName>
    <description>If so, do we own the building or leasehold improvements?</description>
    <inlineHelpText>If so, do we own the building or leasehold improvements?</inlineHelpText>
    <label>Own building or leasehold improvements?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Building_Improvemented_Needed__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>