force-app/main/default/objects/Capital_Requests__c/fields/Payback_years__c.field-meta.xml
<CustomField>
    <fullName>Payback_years__c</fullName>
    <inlineHelpText>Question? Refer to your Financial Analyst.</inlineHelpText>
    <label>Payback (years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>