force-app/main/default/objects/Capital_Requests__c/fields/Physical_Location_JDE_BU_pcn__c.field-meta.xml
<CustomField>
    <fullName>Physical_Location_JDE_BU_pcn__c</fullName>
    <description>Physical Location of Asset(s)</description>
    <inlineHelpText>Physical Location of Asset(s)</inlineHelpText>
    <label>Physical Location (JDE BU)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>