force-app/main/default/objects/Capital_Requests__c/fields/Planned_Unplanned_Project__c.field-meta.xml
<CustomField>
    <fullName>Planned_Unplanned_Project__c</fullName>
    <description>CFR Project Expense Type (Planned or Unplanned)</description>
    <inlineHelpText>Is this CFR Planned or Unplanned?</inlineHelpText>
    <label>Planned/Unplanned Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>