force-app/main/default/objects/Capital_Requests__c/fields/PM_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>PM_Entitlement__c</fullName>
    <description>Fixed Assets Only</description>
    <inlineHelpText>Fixed Assets Only</inlineHelpText>
    <label>PM Entitlement #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>