force-app/main/default/objects/Capital_Requests__c/fields/PM_Entitlement_Number__c.field-meta.xml
<CustomField>
    <fullName>PM_Entitlement_Number__c</fullName>
    <description>Project Manager ID =  (PM) User Employee Number</description>
    <formula>Project_Manager__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Manager ID = (PM) User Employee Number</inlineHelpText>
    <label>Project Manager ID</label>
    <type>Text</type>
</CustomField>