force-app/main/default/objects/Capital_Requests__c/fields/Post_Analysis_Complete__c.field-meta.xml
<CustomField>
    <fullName>Post_Analysis_Complete__c</fullName>
    <label>Post Analysis Complete</label>
    <type>Date</type>
</CustomField>