force-app/main/default/objects/Capital_Requests__c/fields/Post_Analysis_Due__c.field-meta.xml
<CustomField>
    <fullName>Post_Analysis_Due__c</fullName>
    <label>Post Analysis Due</label>
    <type>Date</type>
</CustomField>