force-app/main/default/objects/Capital_Requests__c/fields/Post_Analysis_Notification__c.field-meta.xml
<CustomField>
    <fullName>Post_Analysis_Notification__c</fullName>
    <label>Post Analysis Notification</label>
    <type>Date</type>
</CustomField>