force-app/main/default/objects/Capital_Requests__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assigned PM oversees the entire CFR project, and approves Invoices once Approved.</description>
    <inlineHelpText>The assigned PM oversees the entire CFR project, and approves Invoices once Approved.</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestszsNa</relationshipName>
    <type>Lookup</type>
</CustomField>