force-app/main/default/objects/Capital_Requests__c/fields/Project_Manager_Signature_pcn__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Signature_pcn__c</fullName>
    <description>Project Manager Signature for Sign Off</description>
    <inlineHelpText>Project Manager Signature for Sign Off</inlineHelpText>
    <label>Project Manager Signature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>