force-app/main/default/objects/Capital_Requests__c/fields/Project_Manager_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup user field for Project Manager Supervisor</description>
    <label>Project Manager Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Requests7</relationshipName>
    <type>Lookup</type>
</CustomField>