force-app/main/default/objects/Capital_Requests__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Name of the project</description>
    <label>Project Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>