force-app/main/default/objects/Capital_Requests__c/fields/Project_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,Project_Name__c )</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>