force-app/main/default/objects/Capital_Requests__c/fields/Project_Name_pcn__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_pcn__c</fullName>
    <formula>Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>