force-app/main/default/objects/Capital_Requests__c/fields/Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>Project_Objective__c</fullName>
    <label>Strategic Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>New Product/Market Expansion</fullName>
            </value>
            <value>
                <fullName>Cost Reduction</fullName>
            </value>
            <value>
                <fullName>Core/Base</fullName>
            </value>
            <value>
                <fullName>Profit Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>