force-app/main/default/objects/Capital_Requests__c/fields/Project_Options__c.field-meta.xml
<CustomField>
    <fullName>Project_Options__c</fullName>
    <description>What is the effect of deferring the request one year?
What are the results if request refused altogether?
What other options have been considered?</description>
    <inlineHelpText>What is the effect of deferring the request one year?
What are the results if request refused altogether?
What other options have been considered?</inlineHelpText>
    <label>Project Options</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>