force-app/main/default/objects/Capital_Requests__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <label>Project Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>