force-app/main/default/objects/Capital_Requests__c/fields/Purchasing_tooling_internal_external__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_tooling_internal_external__c</fullName>
    <description>Are we purchasing tooling for internal or external use?</description>
    <inlineHelpText>Are we purchasing tooling for internal or external use?</inlineHelpText>
    <label>Purchasing tooling internal/external?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>