force-app/main/default/objects/Capital_Requests__c/fields/Refused__c.field-meta.xml
<CustomField>
    <fullName>Refused__c</fullName>
    <label>What happens if the request is rejected?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>