force-app/main/default/objects/Capital_Requests__c/fields/Rejection_Comments_Required__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments_Required__c</fullName>
    <label>Rejection Comments Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>