force-app/main/default/objects/Capital_Requests__c/fields/Related_US_field_service_therapy_fleet__c.field-meta.xml
<CustomField>
    <fullName>Related_US_field_service_therapy_fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this CFR related to US Field Service or Therapy Fleet?</description>
    <inlineHelpText>Is this CFR related to US Field Service or Therapy Fleet?</inlineHelpText>
    <label>US Field Service or Therapy Fleet?</label>
    <type>Checkbox</type>
</CustomField>