force-app/main/default/objects/Capital_Requests__c/fields/Replacement_of_Production_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Replacement_of_Production_Equipment__c</fullName>
    <description>(US Based) Does this project result in the replacement of existing production equipment, fixtures, test equipment, machinery, molds, tools, and/or dies, that are used in the production of merchandise that is sent to the United States from another country?</description>
    <inlineHelpText>(US Based) Does this project result in the replacement of existing production equipment, fixtures, test equipment, machinery, molds, tools, and/or dies, that are used in the production of merchandise that is sent to the United States from another country?</inlineHelpText>
    <label>Replacement of Production Equipment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>