force-app/main/default/objects/Capital_Requests__c/fields/Resource_Limitation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Resource_Limitation_Reason__c</fullName>
    <description>Identify reason for resource limitation.</description>
    <inlineHelpText>Identify reason for resource limitation.</inlineHelpText>
    <label>Resource Limitation Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>