force-app/main/default/objects/Capital_Requests__c/fields/Resources_identified_for_participation__c.field-meta.xml
<CustomField>
    <fullName>Resources_identified_for_participation__c</fullName>
    <description>Have all resource been identified and informed regarding participation?</description>
    <inlineHelpText>Have all resource been identified and informed regarding participation?</inlineHelpText>
    <label>Resources identified for participation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>