force-app/main/default/objects/Capital_Requests__c/fields/Resources_Notified__c.field-meta.xml
<CustomField>
    <fullName>Resources_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have all resources been identified and informed regarding participation?</description>
    <inlineHelpText>Have all resources been identified and informed regarding participation?</inlineHelpText>
    <label>Have all resources been notified?</label>
    <type>Checkbox</type>
</CustomField>