force-app/main/default/objects/Capital_Requests__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <inlineHelpText>Question? Refer to your Financial Analyst.</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>