force-app/main/default/objects/Capital_Requests__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <formula>$Label.HRC_CFR_Capital_Item_Tax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <type>Text</type>
</CustomField>