force-app/main/default/objects/Capital_Requests__c/fields/SAP_CFR_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_CFR_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP CFR Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>