force-app/main/default/objects/Capital_Requests__c/fields/SAP_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Integration_Status__c</fullName>
    <label>SAP Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>