force-app/main/default/objects/Capital_Requests__c/fields/SAP_Suppl_Integration_message__c.field-meta.xml
<CustomField>
    <fullName>SAP_Suppl_Integration_message__c</fullName>
    <label>SAP Suppl Integration message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>