force-app/main/default/objects/Capital_Requests__c/fields/SendEmailHelper__c.field-meta.xml
<CustomField>
    <fullName>SendEmailHelper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmailHelper</label>
    <type>Checkbox</type>
</CustomField>