force-app/main/default/objects/Capital_Requests__c/fields/SendReminderEmailWeekdays__c.field-meta.xml
<CustomField>
    <fullName>SendReminderEmailWeekdays__c</fullName>
    <formula>CASE(FLOOR(MOD( Submit_for_Approval_Date__c - DATETIMEVALUE(DATE(1900, 1, 7)), 7)), 0, Submit_for_Approval_Date__c+3, 1, Submit_for_Approval_Date__c+3, 2, Submit_for_Approval_Date__c+3,3, Submit_for_Approval_Date__c+5, 4, Submit_for_Approval_Date__c+5, 5, Submit_for_Approval_Date__c+5, 6, Submit_for_Approval_Date__c+4,null)</formula>
    <label>SendReminderEmailWeekdays</label>
    <type>DateTime</type>
</CustomField>