force-app/main/default/objects/Capital_Requests__c/fields/Senior_VP__c.field-meta.xml
<CustomField>
    <fullName>Senior_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lease Approval ($100 - 250K)</inlineHelpText>
    <label>Senior VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_RequestsrjJ4</relationshipName>
    <type>Lookup</type>
</CustomField>