force-app/main/default/objects/Capital_Requests__c/fields/Status_Place_Holder__c.field-meta.xml
<CustomField>
    <fullName>Status_Place_Holder__c</fullName>
    <label>Status Place Holder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Analyst Approved</fullName>
            </value>
            <value>
                <fullName>Fixed Analyst Approved</fullName>
            </value>
            <value>
                <fullName>Cost Accounting Approved</fullName>
            </value>
            <value>
                <fullName>CIO Approved</fullName>
            </value>
            <value>
                <fullName>Global Sourcing Approved</fullName>
            </value>
            <value>
                <fullName>Optional Reviewers Approved</fullName>
            </value>
            <value>
                <fullName>Safety Team Approved</fullName>
            </value>
            <value>
                <fullName>Facility Team Approved</fullName>
            </value>
            <value>
                <fullName>Division Leader approved</fullName>
            </value>
            <value>
                <fullName>Financial Approver Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>