force-app/main/default/objects/Capital_Requests__c/fields/Strategic_Fit__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Fit__c</fullName>
    <description>Does project support current Plan objectives?
Briefly explain project&apos;s contribution to Business Plan.</description>
    <inlineHelpText>Does project support current Plan objectives?
Briefly explain project&apos;s contribution to Business Plan.</inlineHelpText>
    <label>Strategic Fit</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>