force-app/main/default/objects/Capital_Requests__c/fields/SubjectLine__c.field-meta.xml
<CustomField>
    <fullName>SubjectLine__c</fullName>
    <formula>Project_Name__c+&apos; &apos;+ IF( Supplemental_Check__c = true, &apos;SUPPLEMENTAL&apos;, &apos;APPROVAL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubjectLine</label>
    <type>Text</type>
</CustomField>