force-app/main/default/objects/Capital_Requests__c/fields/Submit_PCN__c.field-meta.xml
<CustomField>
    <fullName>Submit_PCN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when Project Completion Notice information is Completed.</description>
    <inlineHelpText>Check when Project Completion Notice information is Completed.</inlineHelpText>
    <label>Submit PCN</label>
    <type>Checkbox</type>
</CustomField>