force-app/main/default/objects/Capital_Requests__c/fields/Supplemental__c.field-meta.xml
<CustomField>
    <fullName>Supplemental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplemental</label>
    <type>Checkbox</type>
</CustomField>