force-app/main/default/objects/Capital_Requests__c/fields/Supplemental_Check__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Check__c</fullName>
    <formula>IF( Total_Supplemental_Amount__c  &gt; 0 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplemental</label>
    <type>Checkbox</type>
</CustomField>